# filemanagement_app_file_service

./: .clang-format  BUILD.gn  OAT.xml  README.en.md  README.md  README_ZH.md  README_zh.md  backup.gni  bundle.json  ohos.build
frameworks/js/backup_ext/: BUILD.gn  ext_backup_impl.cpp
frameworks/native/backup_ext/: BUILD.gn
frameworks/native/backup_ext/etc/: BUILD.gn  backup.para
frameworks/native/include/: service_proxy.h  service_reverse.h  service_reverse_stub.h
frameworks/native/src/: b_session_backup.cpp  b_session_restore.cpp  complex_object.cpp  service_proxy.cpp  (+2 more)
interfaces/api/js/napi/backup_ext/: BUILD.gn  backup_extension_ability.js
interfaces/inner_api/native/: BUILD.gn  b_file_info.h  b_session_backup.h  b_session_restore.h  backup_kit.h  complex_object.h  i_service.h  i_service_reverse.h  service_proxy.h
interfaces/inner_api/native/backup_kit_inner/: BUILD.gn  backup_kit_inner.h
interfaces/inner_api/native/backup_kit_inner/impl/: b_file_info.h  b_session_backup.h  b_session_restore.h  i_extension.h  i_service.h  i_service_reverse.h  service_proxy.h  service_proxy_load_callback.h  svc_death_recipient.h
services/: 5203.xml  BUILD.gn  backup.cfg  backup.para
services/backup_sa/: BUILD.gn
services/backup_sa/include/: b_json_entity_caps.h  service.h  service_stub.h
services/backup_sa/include/module_ipc/: service.h  service_reverse_proxy.h  service_stub.h  svc_backup_connection.h  svc_death_recipient.h  svc_extension_proxy.h  svc_session_manager.h
services/backup_sa/include/module_sched/: sched_scheduler.h
services/backup_sa/src/: service.cpp  service_stub.cpp
services/backup_sa/src/module_ipc/: service.cpp  service_reverse_proxy.cpp  service_stub.cpp  svc_backup_connection.cpp  svc_extension_proxy.cpp  svc_session_manager.cpp
services/backup_sa/src/module_sched/: sched_scheduler.cpp
services/remote_file_share/src/: remote_file_share.cpp
test/: BUILD.gn
test/fuzztest/: BUILD.gn
test/fuzztest/remotefileshare_fuzzer/: BUILD.gn  remotefileshare_fuzzer.cpp  remotefileshare_fuzzer.h
test/util/: BUILD.gn
test/util/include/: test_manager.h
test/util/src/: test_manager.cpp
tests/moduletests/: BUILD.gn
tests/moduletests/backup_kit_inner/: BUILD.gn  b_session_backup_test.cpp  b_session_restore_test.cpp
tests/moduletests/backup_tool/: BUILD.gn  tool_backup_restore_test.cpp  tool_help_test.cpp  tool_simulate_app_test.cpp
tests/unittests/: BUILD.gn
tests/unittests/backup_api/backup_impl/: BUILD.gn  b_file_info_test.cpp  service_proxy_test.cpp  service_reverse_stub_test.cpp  service_reverse_test.cpp  svc_death_recipient_test.cpp
tests/unittests/backup_api/backup_impl/include/: ext_extension_mock.h  i_service_mock.h  service_mock.h  service_reverse_mock.h
tests/unittests/backup_sa/module_ipc/: BUILD.gn  sched_scheduler_test.cpp  service_reverse_proxy_test.cpp  service_stub_test.cpp  service_test.cpp  svc_backup_connection_test.cpp  svc_extension_proxy_test.cpp  svc_session_manager_mock.h  svc_session_manager_test.cpp
tests/unittests/backup_tools/: BUILD.gn
tests/unittests/backup_tools/backup_tool/: tools_op_backup_test.cpp  tools_op_check_sa_test.cpp  tools_op_restore_test.cpp  tools_op_test.cpp
tests/unittests/backup_utils/: BUILD.gn
tests/unittests/backup_utils/b_error/: b_error_test.cpp
tests/unittests/backup_utils/b_filesystem/: b_dir_test.cpp  b_file_test.cpp
tests/unittests/backup_utils/b_json/: b_json_cached_entity_test.cpp  b_json_entity_ext_manage_test.cpp  b_json_entity_extension_config_test.cpp  b_json_entity_usr_config_test.cpp
tests/unittests/backup_utils/b_process/: b_process_test.cpp
tests/unittests/backup_utils/b_tarball/: b_tarball_cmdline_test.cpp  b_tarball_factory_test.cpp  b_tarball_posix_tarball_test.cpp
tests/utils/: BUILD.gn
tests/utils/include/: test_manager.h
tests/utils/src/: test_manager.cpp
tools/: BUILD.gn
tools/backup_tool/: BUILD.gn
tools/backup_tool/include/: tools_op.h
tools/backup_tool/src/: main.cpp  tools_op.cpp  tools_op_backup.cpp  tools_op_check_sa.cpp  tools_op_help.cpp  tools_op_restore.cpp  tools_op_simulate_app.cpp
tools/backup_tool/test/: BUILD.gn
tools/include/: tools_op.h
tools/src/: main.cpp  tools_op.cpp  tools_op_backup.cpp  tools_op_check_sa.cpp  tools_op_help.cpp  tools_op_mock.cpp  tools_op_restore.cpp  tools_op_simulate_app.cpp
tools/test/: BUILD.gn  tools_test.cpp
utils/: BUILD.gn
utils/include/b_encryption/: b_encryption.h
utils/include/b_error/: b_error.h
utils/include/b_filesystem/: b_dir.h  b_file.h
utils/include/b_json/: b_json_cached_entity.h  b_json_entity.h  b_json_entity_caps.h  b_json_entity_ext_manage.h  b_json_entity_extension_config.h  b_json_entity_usr_config.h  b_json_handle_config.h
utils/include/b_ohos/startup/: backup_para.h
utils/include/b_process/: b_guard_cwd.h  b_guard_signal.h  b_multiuser.h  b_process.h
utils/include/b_resources/: b_constants.h
utils/include/b_tarball/: b_tarball_cmdline.h  b_tarball_factory.h
utils/include/b_tarball/b_tarball_posix/: b_tarball_posix_extended_data.h  b_tarball_posix_extended_entry.h  b_tarball_posix_extended_header.h  b_tarball_posix_file.h  b_tarball_posix_file_data.h  b_tarball_posix_header.h  b_tarball_posix_pax_header.h  b_tarball_posix_tarball.h
utils/src/b_encryption/: b_encryption.cpp
utils/src/b_error/: b_error.cpp
utils/src/b_filesystem/: b_dir.cpp  b_file.cpp
utils/src/b_ipc/: b_want_2_ext.cpp
utils/src/b_json/: b_json_entity_ext_manage.cpp  b_json_entity_extension_config.cpp  b_json_entity_usr_config.cpp  b_json_handle_config.cpp
utils/src/b_ohos/startup/: backup_para.cpp
utils/src/b_process/: b_guard_cwd.cpp  b_guard_signal.cpp  b_process.cpp
utils/src/b_tarball/: b_tarball_cmdline.cpp  b_tarball_factory.cpp
utils/src/b_tarball/b_tarball_posix/: b_tarball_posix_extended_data.cpp  b_tarball_posix_extended_entry.cpp  b_tarball_posix_extended_header.cpp  b_tarball_posix_file.cpp  b_tarball_posix_file_data.cpp  b_tarball_posix_pax_header.cpp  b_tarball_posix_tarball.cpp
utils/test/: BUILD.gn
utils/test/b_filesystem/: b_file_test.cpp
(+56 files in other folders)
