# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

path_backup = "//foundation/filemanagement/backup"

path_ability_runtime = "//foundation/ability/ability_runtime"
path_access_token = "//base/security/access_token"
path_base = "//commonlibrary/c_utils/base"
path_distributedfile = "//foundation/distributeddatamgr/distributedfile"
path_faultloggerd = "//base/hiviewdfx/faultloggerd"
path_googletest = "//third_party/googletest"
path_ipc = "//foundation/communication/ipc"
path_jsoncpp = "//third_party/jsoncpp"
path_napi = "//foundation/arkui/napi"
path_samgr = "//foundation/systemabilitymgr/samgr"
