# 版权所有 (c) 华为技术有限公司 2022

import("//build/ohos.gni")

ohos_executable("backup_tool") {
  sources = [
    "src/main.cpp",
    "src/tools_op.cpp",
    "src/tools_op_check_sa.cpp",
    "src/tools_op_help.cpp",
  ]

  defines = [
    "LOG_DOMAIN=0xD001600",
    "LOG_TAG=\"BackupTool\"",
  ]

  include_dirs = [ "include" ]

  external_deps = [ "backup:backup_api" ]

  deps = [
    "//foundation/distributeddatamgr/distributedfile/utils/filemgmt_libhilog",
  ]

  install_enable = true
  part_name = "backup"
  subsystem_name = "filemanagement"
}
