# 版权所有 (c) 华为技术有限公司 2022

import("//build/ohos.gni")

config("utils_private_config") {
  defines = [
    "LOG_DOMAIN=0xD001600",
    "LOG_TAG=\"BackupUtils\"",
  ]
}

config("utils_public_config") {
  include_dirs = [
    "include",
    "//utils/native/base/include",
  ]
}

ohos_shared_library("backup_utils") {
  sources = [
    "src/b_error/b_error.cpp",
    "src/b_filesystem/b_file.cpp",
    "src/b_process/b_guard_cwd.cpp",
    "src/b_process/b_guard_signal.cpp",
    "src/b_process/b_process.cpp",
    "src/b_tarball/b_tarball_cmdline.cpp",
    "src/b_tarball/b_tarball_factory.cpp",
  ]

  configs = [ ":utils_private_config" ]
  public_configs = [ ":utils_public_config" ]

  deps = [
    "//foundation/distributeddatamgr/distributedfile/utils/filemgmt_libhilog",
  ]

  external_deps = [ "faultloggerd:lib_dfx_dump_catcher" ]

  public_deps = [
    "//third_party/jsoncpp:jsoncpp",
    "//utils/native/base:utils",
  ]

  use_exceptions = true
  part_name = "backup"
  subsystem_name = "filemanagement"
}
