# 版权所有 (c) 华为技术有限公司 2022

import("//build/ohos.gni")
import("//foundation/filemanagement/backup/backup.gni")

config("utils_private_config") {
  defines = [
    "LOG_DOMAIN=0xD004305",
    "LOG_TAG=\"BackupUtils\"",
  ]
}

config("utils_public_config") {
  include_dirs = [
    "include",
    "${path_base}/include",
  ]
}

ohos_shared_library("backup_utils") {
  sources = [
    "src/b_encryption/b_encryption.cpp",
    "src/b_error/b_error.cpp",
    "src/b_filesystem/b_dir.cpp",
    "src/b_filesystem/b_file.cpp",
    "src/b_json/b_json_entity_ext_manage.cpp",
    "src/b_json/b_json_entity_usr_config.cpp",
    "src/b_process/b_guard_cwd.cpp",
    "src/b_process/b_guard_signal.cpp",
    "src/b_process/b_process.cpp",
    "src/b_tarball/b_tarball_cmdline.cpp",
    "src/b_tarball/b_tarball_factory.cpp",
    "src/b_tarball/b_tarball_posix/b_tarball_posix_extended_data.cpp",
    "src/b_tarball/b_tarball_posix/b_tarball_posix_extended_entry.cpp",
    "src/b_tarball/b_tarball_posix/b_tarball_posix_extended_header.cpp",
    "src/b_tarball/b_tarball_posix/b_tarball_posix_file_data.cpp",
    "src/b_tarball/b_tarball_posix/b_tarball_posix_file.cpp",
    "src/b_tarball/b_tarball_posix/b_tarball_posix_pax_header.cpp",
    "src/b_tarball/b_tarball_posix/b_tarball_posix_tarball.cpp",
  ]

  configs = [ ":utils_private_config" ]
  public_configs = [ ":utils_public_config" ]

  external_deps = [ "faultloggerd:lib_dfx_dump_catcher" ]

  public_deps = [
    "${path_base}:utils",
    "${path_distributedfile}/utils/filemgmt_libhilog:filemgmt_libhilog",
    "${path_jsoncpp}:jsoncpp",
  ]

  use_exceptions = true
  part_name = "backup"
  subsystem_name = "filemanagement"
}
