# 版权所有 (c) 华为技术有限公司 2022

import("//build/ohos.gni")
import("//foundation/filemanagement/backup/backup.gni")

ohos_shared_library("backup_sa") {
  sources = [
    "src/module_ipc/service.cpp",
    "src/module_ipc/service_reverse_proxy.cpp",
    "src/module_ipc/service_stub.cpp",
    "src/module_ipc/svc_session_manager.cpp",
  ]

  defines = [
    "LOG_DOMAIN=0xD001600",
    "LOG_TAG=\"BackupSA\"",
    "SA_ROOT_DIR=\"/data/backup/\"",
    "SA_TMP_DIR=\"tmp/\"",
  ]

  include_dirs = [ "include" ]

  deps = [
    "${ability_runtime_path}/interfaces/inner_api/ability_manager:ability_manager",
    "${ability_runtime_path}/services/abilitymgr:abilityms",
    "//foundation/distributeddatamgr/distributedfile/utils/filemgmt_libhilog",
    "//foundation/filemanagement/backup/interfaces/inner_api/native:backup_api",
    "//foundation/filemanagement/backup/utils:backup_utils",
  ]

  external_deps = [
    "bundle_framework:appexecfwk_core",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  use_exceptions = true
  part_name = "backup"
  subsystem_name = "filemanagement"
}
