# 版权所有 (c) 华为技术有限公司 2022

import("//build/ohos.gni")
import("//foundation/filemanagement/backup/backup.gni")

ohos_shared_library("backup_sa") {
  sources = [
    "src/module_ipc/service.cpp",
    "src/module_ipc/service_reverse_proxy.cpp",
    "src/module_ipc/service_stub.cpp",
    "src/module_ipc/svc_session_manager.cpp",
  ]

  defines = [
    "LOG_DOMAIN=0xD004303",
    "LOG_TAG=\"BackupSA\"",
  ]

  include_dirs = [ "include" ]

  deps = [
    "${path_ability_runtime}/interfaces/inner_api/ability_manager:ability_manager",
    "${path_ability_runtime}/services/abilitymgr:abilityms",
    "${path_access_token}/interfaces/innerkits/accesstoken:libaccesstoken_sdk",
    "${path_backup}/utils:backup_utils",
  ]

  external_deps = [
    "ability_base:want",
    "backup:backup_kit_inner",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
    "startup_l2:syspara",
  ]

  use_exceptions = true
  part_name = "backup"
  subsystem_name = "filemanagement"
}
