# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/filemanagement/backup/backup.gni")

ohos_shared_library("backup_sa") {
  sources = [
    "src/module_ipc/service.cpp",
    "src/module_ipc/service_reverse_proxy.cpp",
    "src/module_ipc/service_stub.cpp",
    "src/module_ipc/svc_backup_connection.cpp",
    "src/module_ipc/svc_extension_proxy.cpp",
    "src/module_ipc/svc_session_manager.cpp",
    "src/module_sched/sched_scheduler.cpp",
  ]

  defines = [
    "LOG_DOMAIN=0xD004303",
    "LOG_TAG=\"BackupSA\"",
  ]

  include_dirs = [ "include" ]

  deps = [
    "${path_ability_runtime}/interfaces/inner_api/ability_manager:ability_manager",
    "${path_ability_runtime}/services/abilitymgr:abilityms",
    "${path_access_token}/interfaces/innerkits/accesstoken:libaccesstoken_sdk",
    "${path_backup}/utils:backup_utils",
  ]

  external_deps = [
    "ability_base:want",
    "backup:backup_kit_inner",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "startup_l2:syspara",
  ]

  use_exceptions = true
  part_name = "backup"
  subsystem_name = "filemanagement"
}
