# 版权所有 (c) 华为技术有限公司 2022

import("//build/ohos.gni")
import("//foundation/filemanagement/backup/backup.gni")

config("test_util_public_config") {
  include_dirs = [ "include" ]
}

ohos_static_library("backup_test_utils_static") {
  sources = [ "src/test_manager.cpp" ]

  public_configs = [ ":test_util_public_config" ]

  deps = [ "${path_backup}/utils:backup_utils" ]

  use_exceptions = true
  part_name = "backup"
  subsystem_name = "filemanagement"
}
