# 版权所有 (c) 华为技术有限公司 2022

import("//build/ohos.gni")
import("//foundation/filemanagement/backup/backup.gni")

ohos_executable("backup_tool") {
  sources = [
    "src/main.cpp",
    "src/tools_op.cpp",
    "src/tools_op_backup.cpp",
    "src/tools_op_check_sa.cpp",
    "src/tools_op_help.cpp",
    "src/tools_op_restore.cpp",
    "src/tools_op_simulate_app.cpp",
  ]

  defines = [
    "LOG_DOMAIN=0xD004304",
    "LOG_TAG=\"BackupTool\"",
  ]

  include_dirs = [ "include" ]

  external_deps = [ "backup:backup_kit_inner" ]

  deps = [ "${path_backup}/utils/:backup_utils" ]

  use_exceptions = true
  install_enable = true
  part_name = "backup"
  subsystem_name = "filemanagement"
}