# 版权所有 (c) 华为技术有限公司 2022

import("//build/ohos.gni")
import("//build/ohos_var.gni")

config("public_config") {
  include_dirs = [ "." ]
}

config("private_config") {
  include_dirs = [
    "//foundation/filemanagement/backup/services/backup_sa/include",
    "//foundation/filemanagement/backup/frameworks/native/include",
  ]
}

ohos_shared_library("backup_api") {
  sources = [
    "//foundation/filemanagement/backup/frameworks/native/src/complex_object.cpp",
    "//foundation/filemanagement/backup/frameworks/native/src/service_proxy.cpp",
  ]

  defines = [
    "LOG_DOMAIN=0xD001600",
    "LOG_TAG=\"BackupAPI\"",
  ]

  configs = [ ":private_config" ]
  public_configs = [ ":public_config" ]

  deps = [
    "//foundation/distributeddatamgr/distributedfile/utils/filemgmt_libhilog",
  ]

  external_deps = [
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]

  public_deps = [
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core:ipc_core",
    "//utils/native/base:utils",
  ]

  part_name = "backup"
  subsystem_name = "filemanagement"
}
