# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/filemanagement/backup/backup.gni")

ohos_unittest("b_session_test") {
  module_out_path = "filemanagement/backup"

  sources = [
    "b_session_backup_test.cpp",
    "b_session_restore_test.cpp",
  ]

  include_dirs =
      [ "${path_backup}/interfaces/inner_api/native/backup_kit_inner/" ]

  deps = [
    "${path_backup}/utils:backup_utils",
    "//third_party/googletest:gmock_main",
  ]

  external_deps = [ "backup:backup_kit_inner" ]

  use_exceptions = true
}

group("session_test") {
  testonly = true

  deps = [ ":b_session_test" ]
}
