# 版权所有 (c) 华为技术有限公司 2022

import("//build/test.gni")
import("//foundation/filemanagement/backup/backup.gni")

ohos_unittest("tools_op_test") {
  module_out_path = "filemanagement/backup"

  sources = [
    "tool_backup_restore_test.cpp",
    "tool_help_test.cpp",
    "tool_simulate_app_test.cpp",
  ]

  deps = [
    "${path_backup}/tests/utils:backup_test_utils",
    "${path_backup}/utils/:backup_utils",
  ]

  use_exceptions = true
}

group("tools_test") {
  testonly = true

  deps = [ ":tools_op_test" ]
}
