# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

group("backup_ext_etc") {
  deps = [ ":backup.para" ]
}

ohos_prebuilt_etc("backup.para") {
  source = "backup.para"
  install_images = [ "system" ]
  part_name = "backup"
  subsystem_name = "filemanagement"
  module_install_dir = "etc/param"
}