# 版权所有 (c) 华为技术有限公司 2022

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//foundation/filemanagement/backup/backup.gni")

config("public_config") {
  include_dirs = [
    ".",
    "impl",
  ]
}

config("private_config") {
  include_dirs = [
    "${path_backup}/frameworks/native/backup_kit_inner/include",
    "${path_backup}/interfaces/inner_api/native/backup_kit_inner",
    "${path_backup}/interfaces/inner_api/native/backup_kit_inner/impl",
    "//utils/system/safwk/native/include",
  ]
}

ohos_shared_library("backup_kit_inner") {
  sources = [
    "${path_backup}/frameworks/native/backup_kit_inner/src/b_file_info.cpp",
    "${path_backup}/frameworks/native/backup_kit_inner/src/b_session_backup.cpp",
    "${path_backup}/frameworks/native/backup_kit_inner/src/b_session_restore.cpp",
    "${path_backup}/frameworks/native/backup_kit_inner/src/service_proxy.cpp",
    "${path_backup}/frameworks/native/backup_kit_inner/src/service_proxy_load_callback.cpp",
    "${path_backup}/frameworks/native/backup_kit_inner/src/service_reverse.cpp",
    "${path_backup}/frameworks/native/backup_kit_inner/src/service_reverse_stub.cpp",
  ]

  defines = [
    "LOG_DOMAIN=0xD004302",
    "LOG_TAG=\"BackupAPI\"",
  ]

  configs = [ ":private_config" ]
  public_configs = [ ":public_config" ]

  external_deps = [
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  public_deps = [
    "${path_backup}/utils:backup_utils",
    "${path_base}:utils",
    "${path_ipc}/interfaces/innerkits/ipc_core:ipc_core",
  ]

  use_exceptions = true
  part_name = "backup"
  subsystem_name = "filemanagement"
}
