# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/filemanagement/backup/backup.gni")

ohos_unittest("b_file_info_test") {
  module_out_path = "filemanagement/backup"

  sources = [ "b_file_info_test.cpp" ]

  include_dirs = [
    "${path_base}/include",
    "${path_backup}/interfaces/inner_api/native/backup_kit_inner/impl",
  ]

  deps = [
    "${path_backup}/tests/utils:backup_test_utils",
    "${path_base}:utils",
  ]

  external_deps = [ "backup:backup_kit_inner" ]

  use_exceptions = true
}

ohos_unittest("backup_sa_impl_test") {
  module_out_path = "filemanagement/backup"

  sources = [
    "service_proxy_test.cpp",
    "service_reverse_stub_test.cpp",
    "service_reverse_test.cpp",
    "svc_death_recipient_test.cpp",
  ]

  include_dirs = [
    "${path_backup}/services/backup_sa/include",
    "${path_backup}/frameworks/native/backup_kit_inner/include",
    "${path_backup}/tests/unittests/backup_api/backup_impl/include",
    "${path_backup}/interfaces/inner_api/native/backup_kit_inner/impl",
  ]

  deps = [
    "${path_backup}/tests/utils:backup_test_utils",
    "${path_backup}/utils:backup_utils",
    "//third_party/googletest:gmock_main",
  ]

  external_deps = [
    "backup:backup_kit_inner",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  use_exceptions = true
}

group("backup_impl_test") {
  testonly = true

  deps = [
    ":b_file_info_test",
    ":backup_sa_impl_test",
  ]
}
